force-app/main/default/objects/Account/fields/Dealer_Active_Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Active_Pipeline_Value__c</fullName>
    <label>Dealer Active Pipeline Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>