force-app/main/default/objects/Account/fields/Dealer_Budget__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Budget__c</fullName>
    <label>Dealer Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>