force-app/main/default/objects/Account/fields/Dealer_Contarct_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contarct_End_Date__c</fullName>
    <label>Dealer Contarct End Date</label>
    <type>Date</type>
</CustomField>