force-app/main/default/objects/Account/fields/Dealer_Contarct_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contarct_Start_Date__c</fullName>
    <label>Dealer Contarct Start Date</label>
    <type>Date</type>
</CustomField>