force-app/main/default/objects/Account/fields/Dealer_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Geolocation__c</fullName>
    <label>Dealer Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>