force-app/main/default/objects/Account/fields/Dealer_Primary_PUC__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Primary_PUC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Primary PUC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>