force-app/main/default/objects/Account/fields/Dealer_Total_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Total_Sales_Revenue__c</fullName>
    <label>Dealer Total Sales Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>