force-app/main/default/objects/Account/fields/Dealer_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Training Completed</label>
    <type>Checkbox</type>
</CustomField>