force-app/main/default/objects/Account/fields/Dealer_Type__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Type</label>
    <referenceTo>Dealer_Type__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>