force-app/main/default/objects/Account/fields/Dealer_Website__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Website__c</fullName>
    <label>Dealer Website</label>
    <type>Url</type>
</CustomField>