force-app/main/default/objects/Account/fields/New_D_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>New_D_Geolocation__c</fullName>
    <label>New D Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>