force-app/main/default/objects/Account/fields/Number_of_Trend_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trend_Partner_Contact__c</fullName>
    <label>Number of Trend Partner Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>