force-app/main/default/objects/Account/fields/Operating_Hours_ID__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours ID</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>