force-app/main/default/objects/Account/fields/SLA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Expiration_Date__c</fullName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>