force-app/main/default/objects/Account/listViews/Dealer_Mgt_list.listView-meta.xml
<ListView>
    <fullName>Dealer_Mgt_list</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Dealer_Type__c</columns>
    <columns>Dealer_Primary_POC__c</columns>
    <columns>Dealer_Active_Pipeline_Value__c</columns>
    <columns>Dealer_Contarct_Start_Date__c</columns>
    <columns>Dealer_Contarct_End_Date__c</columns>
    <columns>Dealer_Geolocation__Latitude__s</columns>
    <columns>Dealer_Geolocation__Longitude__s</columns>
    <columns>Dealer_Status__c</columns>
    <columns>Dealer_Budget__c</columns>
    <columns>Dealer_Total_Sales_Revenue__c</columns>
    <columns>Dealer_Training_Completed__c</columns>
    <columns>Dealer_Website__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Dealer_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Dealer Mgt list</label>
</ListView>